crates/ruff_linter/src/rules/pyupgrade/snapshots/ruff_linter__rules__pyupgrade__tests__UP004.py.snap
---
source: crates/ruff_linter/src/rules/pyupgrade/mod.rs
---
UP004.py:5:9: UP004 (useless-object-inheritance) [*] Class `A` inherits from `object`
  |
5 | class A(object):
  |         ^^^^^^ UP004 (useless-object-inheritance)
6 |     ...
  |
  = help: Remove `object` inheritance

ℹ Safe fix
2 2 |     ...
3 3 | 
4 4 | 
5   |-class A(object):
  5 |+class A:
6 6 |     ...
7 7 | 
8 8 | 

UP004.py:10:5: UP004 (useless-object-inheritance) [*] Class `A` inherits from `object`
   |
 9 | class A(
10 |     object,
   |     ^^^^^^ UP004 (useless-object-inheritance)
11 | ):
12 |     ...
   |
   = help: Remove `object` inheritance

ℹ Safe fix
6  6  |     ...
7  7  | 
8  8  | 
9     |-class A(
10    |-    object,
11    |-):
   9  |+class A:
12 10 |     ...
13 11 | 
14 12 | 

UP004.py:16:5: UP004 (useless-object-inheritance) [*] Class `A` inherits from `object`
   |
15 | class A(
16 |     object,
   |     ^^^^^^ UP004 (useless-object-inheritance)
17 |     #
18 | ):
   |
   = help: Remove `object` inheritance

ℹ Unsafe fix
12 12 |     ...
13 13 | 
14 14 | 
15    |-class A(
16    |-    object,
17    |-    #
18    |-):
   15 |+class A:
19 16 |     ...
20 17 | 
21 18 | 

UP004.py:24:5: UP004 (useless-object-inheritance) [*] Class `A` inherits from `object`
   |
22 | class A(
23 |     #
24 |     object,
   |     ^^^^^^ UP004 (useless-object-inheritance)
25 | ):
26 |     ...
   |
   = help: Remove `object` inheritance

ℹ Unsafe fix
19 19 |     ...
20 20 | 
21 21 | 
22    |-class A(
23    |-    #
24    |-    object,
25    |-):
   22 |+class A:
26 23 |     ...
27 24 | 
28 25 | 

UP004.py:31:5: UP004 (useless-object-inheritance) [*] Class `A` inherits from `object`
   |
29 | class A(
30 |     #
31 |     object
   |     ^^^^^^ UP004 (useless-object-inheritance)
32 | ):
33 |     ...
   |
   = help: Remove `object` inheritance

ℹ Unsafe fix
26 26 |     ...
27 27 | 
28 28 | 
29    |-class A(
30    |-    #
31    |-    object
32    |-):
   29 |+class A:
33 30 |     ...
34 31 | 
35 32 | 

UP004.py:37:5: UP004 (useless-object-inheritance) [*] Class `A` inherits from `object`
   |
36 | class A(
37 |     object
   |     ^^^^^^ UP004 (useless-object-inheritance)
38 |     #
39 | ):
   |
   = help: Remove `object` inheritance

ℹ Unsafe fix
33 33 |     ...
34 34 | 
35 35 | 
36    |-class A(
37    |-    object
38    |-    #
39    |-):
   36 |+class A:
40 37 |     ...
41 38 | 
42 39 | 

UP004.py:45:5: UP004 (useless-object-inheritance) [*] Class `A` inherits from `object`
   |
43 | class A(
44 |     #
45 |     object,
   |     ^^^^^^ UP004 (useless-object-inheritance)
46 |     #
47 | ):
   |
   = help: Remove `object` inheritance

ℹ Unsafe fix
40 40 |     ...
41 41 | 
42 42 | 
43    |-class A(
44    |-    #
45    |-    object,
46    |-    #
47    |-):
   43 |+class A:
48 44 |     ...
49 45 | 
50 46 | 

UP004.py:53:5: UP004 (useless-object-inheritance) [*] Class `A` inherits from `object`
   |
51 | class A(
52 |     #
53 |     object,
   |     ^^^^^^ UP004 (useless-object-inheritance)
54 |     #
55 | ):
   |
   = help: Remove `object` inheritance

ℹ Unsafe fix
48 48 |     ...
49 49 | 
50 50 | 
51    |-class A(
52    |-    #
53    |-    object,
54    |-    #
55    |-):
   51 |+class A:
56 52 |     ...
57 53 | 
58 54 | 

UP004.py:61:5: UP004 (useless-object-inheritance) [*] Class `A` inherits from `object`
   |
59 | class A(
60 |     #
61 |     object
   |     ^^^^^^ UP004 (useless-object-inheritance)
62 |     #
63 | ):
   |
   = help: Remove `object` inheritance

ℹ Unsafe fix
56 56 |     ...
57 57 | 
58 58 | 
59    |-class A(
60    |-    #
61    |-    object
62    |-    #
63    |-):
   59 |+class A:
64 60 |     ...
65 61 | 
66 62 | 

UP004.py:69:5: UP004 (useless-object-inheritance) [*] Class `A` inherits from `object`
   |
67 | class A(
68 |     #
69 |     object
   |     ^^^^^^ UP004 (useless-object-inheritance)
70 |     #
71 | ):
   |
   = help: Remove `object` inheritance

ℹ Unsafe fix
64 64 |     ...
65 65 | 
66 66 | 
67    |-class A(
68    |-    #
69    |-    object
70    |-    #
71    |-):
   67 |+class A:
72 68 |     ...
73 69 | 
74 70 | 

UP004.py:75:12: UP004 (useless-object-inheritance) [*] Class `B` inherits from `object`
   |
75 | class B(A, object):
   |            ^^^^^^ UP004 (useless-object-inheritance)
76 |     ...
   |
   = help: Remove `object` inheritance

ℹ Safe fix
72 72 |     ...
73 73 | 
74 74 | 
75    |-class B(A, object):
   75 |+class B(A):
76 76 |     ...
77 77 | 
78 78 | 

UP004.py:79:9: UP004 (useless-object-inheritance) [*] Class `B` inherits from `object`
   |
79 | class B(object, A):
   |         ^^^^^^ UP004 (useless-object-inheritance)
80 |     ...
   |
   = help: Remove `object` inheritance

ℹ Safe fix
76 76 |     ...
77 77 | 
78 78 | 
79    |-class B(object, A):
   79 |+class B(A):
80 80 |     ...
81 81 | 
82 82 | 

UP004.py:84:5: UP004 (useless-object-inheritance) [*] Class `B` inherits from `object`
   |
83 | class B(
84 |     object,
   |     ^^^^^^ UP004 (useless-object-inheritance)
85 |     A,
86 | ):
   |
   = help: Remove `object` inheritance

ℹ Safe fix
81 81 | 
82 82 | 
83 83 | class B(
84    |-    object,
85 84 |     A,
86 85 | ):
87 86 |     ...

UP004.py:92:5: UP004 (useless-object-inheritance) [*] Class `B` inherits from `object`
   |
90 | class B(
91 |     A,
92 |     object,
   |     ^^^^^^ UP004 (useless-object-inheritance)
93 | ):
94 |     ...
   |
   = help: Remove `object` inheritance

ℹ Safe fix
89 89 | 
90 90 | class B(
91 91 |     A,
92    |-    object,
93 92 | ):
94 93 |     ...
95 94 | 

UP004.py:98:5: UP004 (useless-object-inheritance) [*] Class `B` inherits from `object`
    |
 97 | class B(
 98 |     object,
    |     ^^^^^^ UP004 (useless-object-inheritance)
 99 |     # Comment on A.
100 |     A,
    |
    = help: Remove `object` inheritance

ℹ Unsafe fix
95 95 | 
96 96 | 
97 97 | class B(
98    |-    object,
99 98 |     # Comment on A.
100 99 |     A,
101 100 | ):

UP004.py:108:5: UP004 (useless-object-inheritance) [*] Class `B` inherits from `object`
    |
106 |     # Comment on A.
107 |     A,
108 |     object,
    |     ^^^^^^ UP004 (useless-object-inheritance)
109 | ):
110 |     ...
    |
    = help: Remove `object` inheritance

ℹ Safe fix
105 105 | class B(
106 106 |     # Comment on A.
107 107 |     A,
108     |-    object,
109 108 | ):
110 109 |     ...
111 110 | 

UP004.py:119:5: UP004 (useless-object-inheritance) [*] Class `A` inherits from `object`
    |
118 | class A(
119 |     object,
    |     ^^^^^^ UP004 (useless-object-inheritance)
120 | ):
121 |     ...
    |
    = help: Remove `object` inheritance

ℹ Safe fix
115 115 |         ...
116 116 | 
117 117 | 
118     |-class A(
119     |-    object,
120     |-):
    118 |+class A:
121 119 |     ...
122 120 | 
123 121 | 

UP004.py:125:5: UP004 (useless-object-inheritance) [*] Class `A` inherits from `object`
    |
124 | class A(
125 |     object,  # )
    |     ^^^^^^ UP004 (useless-object-inheritance)
126 | ):
127 |     ...
    |
    = help: Remove `object` inheritance

ℹ Unsafe fix
121 121 |     ...
122 122 | 
123 123 | 
124     |-class A(
125     |-    object,  # )
126     |-):
    124 |+class A:
127 125 |     ...
128 126 | 
129 127 | 

UP004.py:131:5: UP004 (useless-object-inheritance) [*] Class `A` inherits from `object`
    |
130 | class A(
131 |     object  # )
    |     ^^^^^^ UP004 (useless-object-inheritance)
132 |     ,
133 | ):
    |
    = help: Remove `object` inheritance

ℹ Unsafe fix
127 127 |     ...
128 128 | 
129 129 | 
130     |-class A(
131     |-    object  # )
132     |-    ,
133     |-):
    130 |+class A:
134 131 |     ...
135 132 | 
136 133 | 

UP004.py:137:9: UP004 (useless-object-inheritance) [*] Class `A` inherits from `object`
    |
137 | class A(object, object):
    |         ^^^^^^ UP004 (useless-object-inheritance)
138 |     ...
    |
    = help: Remove `object` inheritance

ℹ Safe fix
134 134 |     ...
135 135 | 
136 136 | 
137     |-class A(object, object):
    137 |+class A(object):
138 138 |     ...
139 139 | 
140 140 | 

UP004.py:137:17: UP004 (useless-object-inheritance) [*] Class `A` inherits from `object`
    |
137 | class A(object, object):
    |                 ^^^^^^ UP004 (useless-object-inheritance)
138 |     ...
    |
    = help: Remove `object` inheritance

ℹ Safe fix
134 134 |     ...
135 135 | 
136 136 | 
137     |-class A(object, object):
    137 |+class A(object):
138 138 |     ...
139 139 | 
140 140 | 

UP004.py:142:9: UP004 (useless-object-inheritance) [*] Class `A` inherits from `object`
    |
141 | @decorator()
142 | class A(object):
    |         ^^^^^^ UP004 (useless-object-inheritance)
143 |     ...
    |
    = help: Remove `object` inheritance

ℹ Safe fix
139 139 | 
140 140 | 
141 141 | @decorator()
142     |-class A(object):
    142 |+class A:
143 143 |     ...
144 144 | 
145 145 | @decorator()  # class A(object):

UP004.py:146:9: UP004 (useless-object-inheritance) [*] Class `A` inherits from `object`
    |
145 | @decorator()  # class A(object):
146 | class A(object):
    |         ^^^^^^ UP004 (useless-object-inheritance)
147 |     ...
    |
    = help: Remove `object` inheritance

ℹ Safe fix
143 143 |     ...
144 144 | 
145 145 | @decorator()  # class A(object):
146     |-class A(object):
    146 |+class A:
147 147 |     ...
148 148 | 
149 149 | 

UP004.py:159:15: UP004 (useless-object-inheritance) [*] Class `Unusual` inherits from `object`
    |
157 | import builtins
158 |
159 | class Unusual(builtins.object):
    |               ^^^^^^^^^^^^^^^ UP004 (useless-object-inheritance)
160 |     ...
    |
    = help: Remove `object` inheritance

ℹ Safe fix
156 156 | 
157 157 | import builtins
158 158 | 
159     |-class Unusual(builtins.object):
    159 |+class Unusual:
160 160 |     ...
