crates/ruff_linter/src/rules/pyupgrade/snapshots/ruff_linter__rules__pyupgrade__tests__UP008.py.snap
---
source: crates/ruff_linter/src/rules/pyupgrade/mod.rs
---
UP008.py:17:23: UP008 (super-call-with-parameters) [*] Use `super()` instead of `super(__class__, self)`
   |
16 |     def wrong(self):
17 |         parent = super(Child, self)  # wrong
   |                       ^^^^^^^^^^^^^ UP008 (super-call-with-parameters)
18 |         super(Child, self).method  # wrong
19 |         super(
   |
   = help: Remove `super()` parameters

ℹ Unsafe fix
14 14 |         Parent.super(1, 2)  # ok
15 15 | 
16 16 |     def wrong(self):
17    |-        parent = super(Child, self)  # wrong
   17 |+        parent = super()  # wrong
18 18 |         super(Child, self).method  # wrong
19 19 |         super(
20 20 |             Child,

UP008.py:18:14: UP008 (super-call-with-parameters) [*] Use `super()` instead of `super(__class__, self)`
   |
16 |     def wrong(self):
17 |         parent = super(Child, self)  # wrong
18 |         super(Child, self).method  # wrong
   |              ^^^^^^^^^^^^^ UP008 (super-call-with-parameters)
19 |         super(
20 |             Child,
   |
   = help: Remove `super()` parameters

ℹ Unsafe fix
15 15 | 
16 16 |     def wrong(self):
17 17 |         parent = super(Child, self)  # wrong
18    |-        super(Child, self).method  # wrong
   18 |+        super().method  # wrong
19 19 |         super(
20 20 |             Child,
21 21 |             self,

UP008.py:19:14: UP008 (super-call-with-parameters) [*] Use `super()` instead of `super(__class__, self)`
   |
17 |           parent = super(Child, self)  # wrong
18 |           super(Child, self).method  # wrong
19 |           super(
   |  ______________^
20 | |             Child,
21 | |             self,
22 | |         ).method()  # wrong
   | |_________^ UP008 (super-call-with-parameters)
   |
   = help: Remove `super()` parameters

ℹ Unsafe fix
16 16 |     def wrong(self):
17 17 |         parent = super(Child, self)  # wrong
18 18 |         super(Child, self).method  # wrong
19    |-        super(
20    |-            Child,
21    |-            self,
22    |-        ).method()  # wrong
   19 |+        super().method()  # wrong
23 20 | 
24 21 | 
25 22 | class BaseClass:

UP008.py:36:14: UP008 (super-call-with-parameters) [*] Use `super()` instead of `super(__class__, self)`
   |
34 | class MyClass(BaseClass):
35 |     def normal(self):
36 |         super(MyClass, self).f()  # can use super()
   |              ^^^^^^^^^^^^^^^ UP008 (super-call-with-parameters)
37 |         super().f()
   |
   = help: Remove `super()` parameters

ℹ Unsafe fix
33 33 | 
34 34 | class MyClass(BaseClass):
35 35 |     def normal(self):
36    |-        super(MyClass, self).f()  # can use super()
   36 |+        super().f()  # can use super()
37 37 |         super().f()
38 38 | 
39 39 |     def different_argument(self, other):

UP008.py:50:18: UP008 (super-call-with-parameters) [*] Use `super()` instead of `super(__class__, self)`
   |
49 |         def inner_argument(self):
50 |             super(MyClass, self).f()  # can use super()
   |                  ^^^^^^^^^^^^^^^ UP008 (super-call-with-parameters)
51 |             super().f()
   |
   = help: Remove `super()` parameters

ℹ Unsafe fix
47 47 |             super(MyClass, self).f()  # CANNOT use super()
48 48 | 
49 49 |         def inner_argument(self):
50    |-            super(MyClass, self).f()  # can use super()
   50 |+            super().f()  # can use super()
51 51 |             super().f()
52 52 | 
53 53 |         outer_argument()

UP008.py:74:14: UP008 (super-call-with-parameters) [*] Use `super()` instead of `super(__class__, self)`
   |
72 | class DataClass:
73 |     def normal(self):
74 |         super(DataClass, self).f()  # Error
   |              ^^^^^^^^^^^^^^^^^ UP008 (super-call-with-parameters)
75 |         super().f()  # OK
   |
   = help: Remove `super()` parameters

ℹ Unsafe fix
71 71 | @dataclass
72 72 | class DataClass:
73 73 |     def normal(self):
74    |-        super(DataClass, self).f()  # Error
   74 |+        super().f()  # Error
75 75 |         super().f()  # OK
76 76 | 
77 77 | 

UP008.py:92:14: UP008 (super-call-with-parameters) [*] Use `super()` instead of `super(__class__, self)`
   |
90 | class B(A):
91 |     def bar(self):
92 |         super(__class__, self).foo()
   |              ^^^^^^^^^^^^^^^^^ UP008 (super-call-with-parameters)
   |
   = help: Remove `super()` parameters

ℹ Unsafe fix
89 89 | 
90 90 | class B(A):
91 91 |     def bar(self):
92    |-        super(__class__, self).foo()
   92 |+        super().foo()
93 93 | 
94 94 | 
95 95 | # see: https://github.com/astral-sh/ruff/issues/18684

UP008.py:107:23: UP008 (super-call-with-parameters) [*] Use `super()` instead of `super(__class__, self)`
    |
105 | class C:
106 |     def f(self):
107 |         builtins.super(C, self)
    |                       ^^^^^^^^^ UP008 (super-call-with-parameters)
    |
    = help: Remove `super()` parameters

ℹ Unsafe fix
104 104 | 
105 105 | class C:
106 106 |     def f(self):
107     |-        builtins.super(C, self)
    107 |+        builtins.super()
