crates/ruff_linter/src/rules/pyupgrade/snapshots/ruff_linter__rules__pyupgrade__tests__UP009_0.py.snap
---
source: crates/ruff_linter/src/rules/pyupgrade/mod.rs
---
UP009_0.py:1:1: UP009 (utf8-encoding-declaration) [*] UTF-8 encoding declaration is unnecessary
  |
1 | # coding=utf8
  | ^^^^^^^^^^^^^ UP009 (utf8-encoding-declaration)
2 |
3 | print("Hello world")
  |
  = help: Remove unnecessary coding comment

ℹ Safe fix
1   |-# coding=utf8
2 1 | 
3 2 | print("Hello world")
