crates/ruff_linter/src/rules/pyupgrade/snapshots/ruff_linter__rules__pyupgrade__tests__UP010.py.snap
---
source: crates/ruff_linter/src/rules/pyupgrade/mod.rs
---
UP010.py:1:1: UP010 (unnecessary-future-import) [*] Unnecessary `__future__` imports `generators`, `nested_scopes` for target Python version
  |
1 | from __future__ import nested_scopes, generators
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ UP010 (unnecessary-future-import)
2 | from __future__ import with_statement, unicode_literals
3 | from __future__ import absolute_import, division
  |
  = help: Remove unnecessary `__future__` import

ℹ Safe fix
1   |-from __future__ import nested_scopes, generators
2 1 | from __future__ import with_statement, unicode_literals
3 2 | from __future__ import absolute_import, division
4 3 | from __future__ import generator_stop

UP010.py:2:1: UP010 (unnecessary-future-import) [*] Unnecessary `__future__` imports `unicode_literals`, `with_statement` for target Python version
  |
1 | from __future__ import nested_scopes, generators
2 | from __future__ import with_statement, unicode_literals
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ UP010 (unnecessary-future-import)
3 | from __future__ import absolute_import, division
4 | from __future__ import generator_stop
  |
  = help: Remove unnecessary `__future__` import

ℹ Safe fix
1 1 | from __future__ import nested_scopes, generators
2   |-from __future__ import with_statement, unicode_literals
3 2 | from __future__ import absolute_import, division
4 3 | from __future__ import generator_stop
5 4 | from __future__ import print_function, generator_stop

UP010.py:3:1: UP010 (unnecessary-future-import) [*] Unnecessary `__future__` imports `absolute_import`, `division` for target Python version
  |
1 | from __future__ import nested_scopes, generators
2 | from __future__ import with_statement, unicode_literals
3 | from __future__ import absolute_import, division
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ UP010 (unnecessary-future-import)
4 | from __future__ import generator_stop
5 | from __future__ import print_function, generator_stop
  |
  = help: Remove unnecessary `__future__` import

ℹ Safe fix
1 1 | from __future__ import nested_scopes, generators
2 2 | from __future__ import with_statement, unicode_literals
3   |-from __future__ import absolute_import, division
4 3 | from __future__ import generator_stop
5 4 | from __future__ import print_function, generator_stop
6 5 | from __future__ import invalid_module, generators

UP010.py:4:1: UP010 (unnecessary-future-import) [*] Unnecessary `__future__` import `generator_stop` for target Python version
  |
2 | from __future__ import with_statement, unicode_literals
3 | from __future__ import absolute_import, division
4 | from __future__ import generator_stop
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ UP010 (unnecessary-future-import)
5 | from __future__ import print_function, generator_stop
6 | from __future__ import invalid_module, generators
  |
  = help: Remove unnecessary `__future__` import

ℹ Safe fix
1 1 | from __future__ import nested_scopes, generators
2 2 | from __future__ import with_statement, unicode_literals
3 3 | from __future__ import absolute_import, division
4   |-from __future__ import generator_stop
5 4 | from __future__ import print_function, generator_stop
6 5 | from __future__ import invalid_module, generators
7 6 | 

UP010.py:5:1: UP010 (unnecessary-future-import) [*] Unnecessary `__future__` imports `generator_stop`, `print_function` for target Python version
  |
3 | from __future__ import absolute_import, division
4 | from __future__ import generator_stop
5 | from __future__ import print_function, generator_stop
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ UP010 (unnecessary-future-import)
6 | from __future__ import invalid_module, generators
  |
  = help: Remove unnecessary `__future__` import

ℹ Safe fix
2 2 | from __future__ import with_statement, unicode_literals
3 3 | from __future__ import absolute_import, division
4 4 | from __future__ import generator_stop
5   |-from __future__ import print_function, generator_stop
6 5 | from __future__ import invalid_module, generators
7 6 | 
8 7 | if True:

UP010.py:6:1: UP010 (unnecessary-future-import) [*] Unnecessary `__future__` import `generators` for target Python version
  |
4 | from __future__ import generator_stop
5 | from __future__ import print_function, generator_stop
6 | from __future__ import invalid_module, generators
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ UP010 (unnecessary-future-import)
7 |
8 | if True:
  |
  = help: Remove unnecessary `__future__` import

ℹ Safe fix
3 3 | from __future__ import absolute_import, division
4 4 | from __future__ import generator_stop
5 5 | from __future__ import print_function, generator_stop
6   |-from __future__ import invalid_module, generators
  6 |+from __future__ import invalid_module
7 7 | 
8 8 | if True:
9 9 |     from __future__ import generator_stop

UP010.py:9:5: UP010 (unnecessary-future-import) [*] Unnecessary `__future__` import `generator_stop` for target Python version
   |
 8 | if True:
 9 |     from __future__ import generator_stop
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ UP010 (unnecessary-future-import)
10 |     from __future__ import generators
   |
   = help: Remove unnecessary `__future__` import

ℹ Safe fix
6  6  | from __future__ import invalid_module, generators
7  7  | 
8  8  | if True:
9     |-    from __future__ import generator_stop
10 9  |     from __future__ import generators
11 10 | 
12 11 | if True:

UP010.py:10:5: UP010 (unnecessary-future-import) [*] Unnecessary `__future__` import `generators` for target Python version
   |
 8 | if True:
 9 |     from __future__ import generator_stop
10 |     from __future__ import generators
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ UP010 (unnecessary-future-import)
11 |
12 | if True:
   |
   = help: Remove unnecessary `__future__` import

ℹ Safe fix
7  7  | 
8  8  | if True:
9  9  |     from __future__ import generator_stop
10    |-    from __future__ import generators
11 10 | 
12 11 | if True:
13 12 |     from __future__ import generator_stop

UP010.py:13:5: UP010 (unnecessary-future-import) [*] Unnecessary `__future__` import `generator_stop` for target Python version
   |
12 | if True:
13 |     from __future__ import generator_stop
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ UP010 (unnecessary-future-import)
14 |     from __future__ import invalid_module, generators
15 |     from __future__ import generators  # comment
   |
   = help: Remove unnecessary `__future__` import

ℹ Safe fix
10 10 |     from __future__ import generators
11 11 | 
12 12 | if True:
13    |-    from __future__ import generator_stop
14 13 |     from __future__ import invalid_module, generators
15 14 |     from __future__ import generators  # comment

UP010.py:14:5: UP010 (unnecessary-future-import) [*] Unnecessary `__future__` import `generators` for target Python version
   |
12 | if True:
13 |     from __future__ import generator_stop
14 |     from __future__ import invalid_module, generators
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ UP010 (unnecessary-future-import)
15 |     from __future__ import generators  # comment
   |
   = help: Remove unnecessary `__future__` import

ℹ Safe fix
11 11 | 
12 12 | if True:
13 13 |     from __future__ import generator_stop
14    |-    from __future__ import invalid_module, generators
   14 |+    from __future__ import invalid_module
15 15 |     from __future__ import generators  # comment

UP010.py:15:5: UP010 (unnecessary-future-import) [*] Unnecessary `__future__` import `generators` for target Python version
   |
13 |     from __future__ import generator_stop
14 |     from __future__ import invalid_module, generators
15 |     from __future__ import generators  # comment
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ UP010 (unnecessary-future-import)
   |
   = help: Remove unnecessary `__future__` import

ℹ Unsafe fix
12 12 | if True:
13 13 |     from __future__ import generator_stop
14 14 |     from __future__ import invalid_module, generators
15    |-    from __future__ import generators  # comment
